@@ -8,8 +8,11 @@ namespace MSClient.Map;
 
 public class MapObject : Actor
 {
-    private List<Texture> _frames;
-    private int _frame, _frameCount;
+    private readonly List<Texture> _frames;
+    private readonly int _frameCount;
+    private readonly bool _animated;
+
+    private int _currentFrame;
     private int _delay;
 
     public MapObject(ref NxNode node, Texture texture, Vector2 position, Vector2 origin, ActorLayer layer, int order)
@@ -18,8 +21,8 @@ public class MapObject : Actor
         _node = node;
         _frames = new List<Texture>(1) { texture };
         _frameCount = 1;
-        _delay = -1;
-        _frame = 0;
+        _currentFrame = 0;
+        _animated = false;
         _position = position;
         _origin = origin;
         _layer = layer;
@@ -31,9 +34,10 @@ public class MapObject : Actor
         : base(ref node)
     {
         _node = node;
-        _frame = 0;
+        _currentFrame = 0;
         _frames = textures;
         _frameCount = _frames.Count - 1;
+        _animated = true;
         _position = position;
         _origin = _node["0"].GetVector("origin");
         _delay = _node["0"].GetInt("delay");
@@ -50,28 +54,28 @@ public class MapObject : Actor
     {
         if (_frameCount > 1)
         {
-            _origin = _node[$"{_frame}"].GetVector("origin");
-            _bounds = new Rectangle(Position.X, Position.Y, _frames[_frame].width, _frames[_frame].height);
+            _origin = _node[$"{_currentFrame}"].GetVector("origin");
+            _bounds = new Rectangle(Position.X, Position.Y, _frames[_currentFrame].width, _frames[_currentFrame].height);
         }
 
-        Raylib.DrawTextureEx(_frames[_frame], Position, 0.0f, 1.0f, Raylib.WHITE);
-        Raylib.DrawRectangleLinesEx(_bounds, 2.0f, Raylib.RED);
+        Raylib.DrawTextureEx(_frames[_currentFrame], Position, 0.0f, 1.0f, Raylib.WHITE);
+        //Raylib.DrawRectangleLinesEx(_bounds, 2.0f, Raylib.RED);
     }
 
     public override void Update(float frameTime)
     {
-        if (_delay == -1)
+        if (!_animated)
             return;
         
-        if (_frameCount >= _frames.Count - 1) {
-            _frameCount = 0;
+        if (_currentFrame >= _frameCount) {
+            _currentFrame = 0;
             _delay = _node["0"].GetInt("delay");
             return;
         }
 
         if (_delay <= 0) {
-            _frame++;
-            _delay = _node[$"{_frame}"].GetInt("delay");
+            _currentFrame++;
+            _delay = _node[$"{_currentFrame}"].GetInt("delay");
         } else {
             _delay -= (int)frameTime;
         }
